<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <merge
        android:id="@+id/unsuccessful_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

        <LinearLayout
            android:id="@+id/error_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/error_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13sp"
                android:text="@string/Smth_error"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/refresh_button"
                android:layout_width="175sp"
                android:layout_height="36sp"
                android:layout_marginTop="32sp"
                android:padding="0sp"
                android:text="@string/refresh"
                android:textColor="@color/white"
                android:background="@drawable/orange_button_background_selector" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:indeterminateTint="@color/orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </merge>
</layout>
