<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:background="@color/white"
            android:outlineProvider="bounds"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!-- Предпоследний атрибут слоя требует изучения (Сделал линию тени)-->

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="32sp"
                android:elevation="20sp"
                android:text="@string/list_label"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/usd_chip"
                android:layout_width="89sp"
                android:layout_height="32sp"
                android:layout_below="@id/label"
                android:layout_marginStart="16sp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="13sp"
                android:padding="0sp"
                android:text="@string/usd"
                android:textSize="14sp"
                android:textColor="@drawable/chips_text_color_selector"
                android:background="@drawable/usd_chips_state_selector" />

            <Button
                android:id="@+id/eur_chip"
                android:layout_width="89sp"
                android:layout_height="32sp"
                android:layout_below="@id/label"
                android:layout_marginStart="8sp"
                android:layout_marginTop="8sp"
                android:layout_marginBottom="13sp"
                android:layout_toRightOf="@id/usd_chip"
                android:padding="0sp"
                android:text="@string/eur"
                android:textSize="14sp"
                android:textColor="@drawable/chips_text_color_selector"
                android:background="@drawable/usd_chips_state_selector" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/crypto_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/crypto_view_item" />

        <include
            layout="@layout/unsuccessful_result"
            android:id="@+id/unsuccessful_result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
